--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,9 +293,6 @@ button,
 	cursor: pointer;
 	display: inline-block;
 	font-weight: 700;
-	height: 3em;
-	line-height: 3em;
-	padding: 0 2.5em;
 	text-align: center;
 	text-decoration: none;
 	white-space: nowrap;
@@ -689,7 +686,7 @@ section.special, article.special {
 }
 
 section.more {
-  height: 10vh;
+  height: 70px;
 }
 
 /* Header */
